--- a/src/assets/css/theme-colors.scss
+++ b/src/assets/css/theme-colors.scss
@@ -11,6 +11,8 @@
     --accentc: #95E4D3;
 }
 
+// themes work in progress
+
 [theme="twilight"] {
     --background-color: #1E2448;
     --background-mute: #3F487D;
