centered + better css + allow errors button

--- a/src/assets/css/theme-colors.scss
+++ b/src/assets/css/theme-colors.scss
@@ -9,6 +9,7 @@
     --accentb: #E36B60;
     --accentb-mute: #E36B60;
     --accentc: #95E4D3;
+    --accentd: #CAA2F5;
 }
 
 // themes work in progress
