--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -2,9 +2,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500;700&display=swap');
 
+html, body {
+    margin: 0;
+}
+
 #app {
     font-family: 'Fira Mono', 'Lato', 'Noto Sans', Arial, Helvetica, sans-serif;
-    align-items: center;;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) + translateY(-50%);
+    transition: all 500ms ease-out;
 }
 
 .word-container {
@@ -56,6 +65,7 @@
 }
 
 input {
+    margin: 16px 8px 8px 8px;
     padding-bottom: 4px;
     background-color: var(--background-mute);
     color: var(--primary-color);
@@ -76,8 +86,7 @@ input:focus {
 #typing-test {
     display: inline-grid;
     grid-template-columns: 1fr auto;
-    grid-template-rows: auto auto auto;
-    margin-top: 10vh;
+    grid-template-rows: auto 1fr 1fr;
     width: 768px;
     padding: 48px;
     border-radius: 32px;
@@ -104,7 +113,7 @@ input:focus {
 
 #btn-container {
     grid-column-start: 1;
-    grid-column-end: 2;
+    grid-column-end: 3;
     grid-row-start: 3;
     grid-row-end: 4;
     margin-top: 8px;
@@ -113,11 +122,11 @@ input:focus {
 #speed-counter {
     grid-column-start: 2;
     grid-column-end: 3;
-    grid-row-start: 3;
-    grid-row-end: 4;
+    grid-row-start: 2;
+    grid-row-end: 3;
     font-size: 16px;
-    margin-left: 8px;
-    margin-top: 12px;
+    margin-left: 32px;
+    margin-top: 16px;
     text-align: right;
     text-align: right;
 }
@@ -133,6 +142,8 @@ input:focus {
     margin: 4px;
     border-radius: 8px;
     font-weight: 500;
+    user-select: none;
+    transition-duration: 100ms;
 }
 
 .btn.accent {
@@ -143,13 +154,27 @@ input:focus {
 .btn.selected {
     background-color: var(--accentc);
     color: var(--background-3);
-    transform: translate(0, 4px);
+    transform: translate(0, 2px);
     transition-duration: 200ms;
 }
 
 .btn.selected-alt {
     background-color: var(--accentb);
     color: var(--background-3);
+    transform: translate(0, 2px);
+    transition-duration: 200ms;
+}
+
+.btn.selected-alt2 {
+    background-color: var(--accentd);
+    color: var(--background-3);
+    transform: translate(0, 2px);
+    transition-duration: 200ms;
+}
+
+.btn:active {
+    background-color: var(--primary-color);
+    color: var(--background-color);
     transform: translate(0, 4px);
     transition-duration: 200ms;
 }
