--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -6,6 +6,11 @@ html, body {
     margin: 0;
 }
 
+body {
+    background-color: var(--background-color);
+    color: var(--primary-color);
+}
+
 #app {
     font-family: 'Fira Mono', 'Lato', 'Noto Sans', Arial, Helvetica, sans-serif;
     margin: 0;
