--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -70,7 +70,7 @@ body {
 }
 
 input {
-    margin: 16px 8px 8px 8px;
+    margin: 8px;
     padding-bottom: 4px;
     background-color: var(--background-mute);
     color: var(--primary-color);
@@ -78,8 +78,12 @@ input {
     border-color: var(--background-3);
     font-size: 16px;
     font-family: 'Fira Code', 'Lato', 'Noto Sans', Arial, Helvetica, sans-serif;
-    width: 100%;
     transition-duration: 200ms;
+}
+
+input.wide {
+    margin: 16px 8px 8px 8px;
+    width: 100%;
 }
 
 input:focus {
@@ -88,7 +92,7 @@ input:focus {
     transition-duration: 100ms;
 }
 
-#typing-test {
+.panel {
     display: inline-grid;
     grid-template-columns: 1fr auto;
     grid-template-rows: auto 1fr 1fr;
