--- a/src/assets/css/theme-colors.scss
+++ b/src/assets/css/theme-colors.scss
@@ -1,10 +1,10 @@
 :root {
-    --background-color: #2C2C2A;
-    --background-mute: #3F3F3B;
-    --background-3: #4A4945;
-    --primary-color: #EAE7DC;
-    --secondary-color: #DFDCD1;
-    --primary-mute: #DFDCD1A0;
+    --bg0: #2C2C2A;
+    --bg1: #3F3F3B;
+    --bg2: #4A4945;
+    --fg0: #EAE7DC;
+    --fg1: #DFDCD1;
+    --fg-mute: #DFDCD1A0;
     --accent: #B4ED5A;
     --accentb: #E36B60;
     --accentb-mute: #E36B60;
